metadata-retriever/metadata/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodgement_Date__c</fullName>
        <label>Lodgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participating Dealer/Package</label>
        <referenceTo>Participating_Dealer__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>